@@ -1,6 +1,7 @@
 package io.iamofoe.ecommerceservice.service;
 
 import io.iamofoe.ecommerceservice.converter.SellerRequestDtoConverter;
+import io.iamofoe.ecommerceservice.domain.model.ProductVisibility;
 import io.iamofoe.ecommerceservice.domain.model.RequestStatus;
 import io.iamofoe.ecommerceservice.domain.model.SellerRequest;
 import io.iamofoe.ecommerceservice.domain.model.User;
@@ -11,17 +12,14 @@ import io.iamofoe.ecommerceservice.dto.request.UpdateSellerRequestDto;
 import io.iamofoe.ecommerceservice.dto.response.AllSellerRequestsDto;
 import io.iamofoe.ecommerceservice.dto.response.SellerRequestDto;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static io.iamofoe.ecommerceservice.domain.model.Role.SELLER;
 import static io.iamofoe.ecommerceservice.domain.model.Role.USER;
-import static java.util.stream.Collectors.toList;
 
 @Service
 @RequiredArgsConstructor
@@ -30,13 +28,14 @@ public class SellerRequestRepositoryService implements SellerRequestService {
     private final SellerRequestDtoConverter sellerRequestDtoConverter;
     private final UserRepositoryService userRepositoryService;
     private final UserRepository userRepository;
+    private final ProductService productService;
 
     @Override
     public AllSellerRequestsDto getAllRequests() {
         List<SellerRequest> sellerRequests = sellerRequestRepository.findAll();
         return AllSellerRequestsDto.builder()
                 .requests(sellerRequests.stream()
-                        .map(sellerRequestDtoConverter::convert).collect(toList()))
+                        .map(sellerRequestDtoConverter::convert).toList())
                 .build();
     }
 
@@ -76,10 +75,18 @@ public class SellerRequestRepositoryService implements SellerRequestService {
     private void changeRole(UpdateSellerRequestDto dto, long userId) {
         User user = userRepositoryService.getUserWithId(userId);
         switch (dto.getStatus()) {
-            case PENDING, REVOKED -> user.setRole(USER);
+            case PENDING, REVOKED -> {
+                user.setRole(USER);
+                changeUserProductStatus(userId);
+            }
             case GRANTED -> user.setRole(SELLER);
         }
         userRepository.save(user);
+    }
+
+    private void changeUserProductStatus(long userId) {
+        productService.getProductsByUser(userId)
+                .forEach(product -> product.setProductVisibility(ProductVisibility.HIDDEN));
     }
 
     private SellerRequest getSellerRequest(long userId) {
